   tag "as is", which was not understood by web browsers).
   [follow-up to PR #2797]

 - Made the distro-dependent URL template for man pages configurable.
   [follow-up to PR #2797]

 - Revised `make install-as-root` to fall back to legacy ways of enabling
   services, if `systemctl preset-all` fails (assumed due to a systemd 252
   bug). [#3022]


Release notes for NUT 2.8.3 - what's new since 2.8.2
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/11

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1 and/or v2.8.2:
   * Move of `NUT_DEBUG_LEVEL` and "-D" CLI option handling to start of
     driver programs for issue #2259 in NUT v2.8.2 release misfired with
     regard to data-dump mode (it no longer caused foreground by default).
     [#2408]
   * The `nut-driver-enumerator.sh` improvements misfired in v2.8.2 release
     with an overlooked bit of shell syntax, and caused `nut-driver@upsname`
     instances to not auto-restart when `ups.conf` is edited. [#682, #2410]
   * Addition of "NUT Simulated devices" support to `nut-scanner` in v2.8.2
     broke detection of (in-)ability to find and query "Old NUT" servers via
     `libupsclient.so` (internal flag got always enabled). [#2246]
   * A fix for `upsmon` v2.8.1 setting of `OFFDURATION` [PR #2108, issue #2104,
     revisiting PR #2055, issue #2044] was overly zealous and impacted also
     the `OB` state in cases where communications to the data server were
     severed and `DEADTIME` setting was not honored. [PR #2462, issue #2454]
   * Using `drivername -c reload` (e.g. facilitated by `nut-driver-enumerator`
     script and service when editing `ups.conf`) led to disconnected Unix
     sockets and a tight polling loop that hogged CPU. While the underlying
     bug is ancient, it took recent development to hit it as a practical
     regression. [issue #1904, issue #2484]
   * Fallback `localtime_r()` and `gmtime_r()` for some platform builds where